--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>...</title>
+    <link rel='Shortcut Icon' type='image/x-icon'
+        href='https://gitee.com/sun0225/photos/raw/master/img/20210619165652.png'>
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <script>
