--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>...</title>
     <link rel='Shortcut Icon' type='image/x-icon'
-        href='/favicon.ico'>
+        href='favicon.ico'>
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <script>
