--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         <div class="mask" :style="{background:'rgba(0,0,0,0.18)'}"></div>
         
         <!--开始按钮-->
-        <div class="btn shadow-hover fa fa-fw"
+        <div class="btn shadow-hover fa fa-fw fa-windows"
              style="width: 36px;"
              :class="[ 'fa-'+YL.info.iconBtnStart, {btnStartOpen: startMenu.open } ]"
              @click="if(startMenu.open){hideOpens();}else{hideOpens();startMenu.open=true} "></div>
@@ -420,6 +420,9 @@
     <div class="center shadow" :class="{open:center.open}" :style="centerStyle">
         <div class="mask"
              :style="{background:configs.themeColor}"></div>
+        <div class="banner">{{YL.lang("NoticeCenter")}}
+            <div class="clear" v-show="center.msgNum>0" @click="btnCenterClear">{{YL.lang("NoticeClearAll")}}</div>
+        </div>
         <transition
                 name="custom-classes-transition-msg"
                 enter-active-class="animated slideInRight"
