--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>...</title>
+	<link rel='Shortcut Icon' type='image/x-icon'
+	        href='favicon.ico'>
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <script>
@@ -241,7 +243,7 @@
         <div class="mask" :style="{background:'rgba(0,0,0,0.18)'}"></div>
         
         <!--开始按钮-->
-        <div class="btn shadow-hover fa fa-fw fa-windows"
+        <div class="btn shadow-hover fa fa-fw"
              style="width: 36px;"
              :class="[ 'fa-'+YL.info.iconBtnStart, {btnStartOpen: startMenu.open } ]"
              @click="if(startMenu.open){hideOpens();}else{hideOpens();startMenu.open=true} "></div>
